--- a/composer.json
+++ b/composer.json
@@ -12,7 +12,7 @@
 		}
 	],
 	"require": {
-		"kdyby/doctrine": "~2.2"
+		"kdyby/doctrine": ">2.2"
 	},
 	"require-dev": {
 		"nette/tester": "~1.3.0",
